--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ python:
   - "3.6"
 
 cache: pip
-install: "pip install -r requirements.txt"
+install: "pip3 install -r requirements.txt"
 sript: python test.py
