--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
-lenguage: python3
+lenguage: python
 python:
   - "3.5"
   - "3.6"
   - "3.6.5"
 
 cache: pip
-install: "pip install -r requirements.txt"
+install: pip install -r requirements.txt
 sript: python test.py
